# internal/presenter/handler/handler_V1GetProfile.go
@@ -1,0 +1,19 @@
+package handler
+
+import (
+	"net/http"
+	"user-service/generated/api"
+)
+
+func (h *handler) V1GetProfile(w http.ResponseWriter, r *http.Request) {
+
+	resp := api.V1GetProfile200Response{
+		BackgroundImage: "",
+		Email:           "",
+		FullName:        "",
+		Id:              0,
+		Image:           "",
+	}
+
+	h.writeJson(w, r, http.StatusOK, resp)
+}
